Updated styles for .profile-picture
As per slack request from Dokel

--- a/styles.css
+++ b/styles.css
@@ -70,11 +70,11 @@ header .profile-image {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 3px solid white;
+  border: 3px solid #F7F5F0;
   transition: all .5s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.5) rotate(-5deg);
 }
 .tag {
   background-color: #efefef;
